--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,14 +4,17 @@ body{
     font-optical-sizing: auto;
 }
 .size{
-    max-width: 1320x;
+    max-width: 1320px;
     margin: 0px auto;
 }
 .section-title{
     color: #FFFFFF;
-    font-size: 30px;
-    font-weight: 700;
+    font-size: 80px;
+    font-weight: 900;
     text-align: center;
+    margin: 0;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
     
 }
 /* header section */
@@ -20,4 +23,42 @@ body{
     width: 1320px;
     height: 600px;
     margin-top: 50px;
+}
+.banner-content{
+    padding-top: 170px;
+}
+.banner-text{
+    color: #FFFFFF;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    margin: 0;
+}
+/* main-offer section */
+.offer-section{
+    width: 800px;
+    height: 800px;
+    margin: 0px auto;
+    padding: 0 40px;
+    text-align: center;
+}
+.offer-section-title{
+    color: #FF0000;
+    font-size: 65px;
+    margin-bottom: 0;
+    font-weight: 700;
+}
+.offer-deal-text{
+    color: #FF0000;
+    font-size: 18px;
+    margin-bottom: 0;
+    margin-top: 30px;
+}
+.offer-category-text{
+    color: #070211;
+    font-size: 35px;
+    font-weight: 700;
+    margin: 0;
+    margin-bottom: 30px;
+    margin-top: 10px;
 }
