--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,3 +62,32 @@ body{
     margin-bottom: 30px;
     margin-top: 10px;
 }
+.welcome-section{
+    background-image: url(../images/Vectorrr.png);
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-between;
+}
+.welcome-text{
+    margin: 40px 0px 70px 90px;
+    color: #FFFFFF;
+}
+.welcome-title{
+    font-size: 80px;
+    margin-bottom: 0px;
+    font-weight: 700;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+}
+.welcome-massage{
+    font-size: 20px;
+    font-weight: 700;
+}
+.welcome-image{
+    margin: 70px 90px 70px 90px;
+}
+.join-now{
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 45px;
+}
