--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,7 @@ body{
     font-weight: 700;
     margin-left: 45px;
 }
+/* venue styles */
 .venue{
     text-align: center;
     background-color: #fcd7d7;
@@ -117,3 +118,58 @@ body{
     margin-top: 35px;
     font-weight: 700;
 }
+.new-year-offer-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 80px;
+}
+.upcoming-offer{
+    height: 393px;
+    width: 255px;
+}
+.upcoming-offer-title{
+    font-size: 16px;
+    color: #FF0000;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 80px;
+}
+.upcoming-offer-heading{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-size: 30px;
+    font-weight: 900;
+    margin-top: 0px;
+}
+.upcoming-offer-text{
+    font-size: 18px;
+    color: #070211;
+}
+.new-year-offer-image{
+    border: 10px solid #FF0000;
+    border-radius: 250px;
+    padding: 25px;
+}
+.current-year{
+    height: 393px;
+    width: 255px;
+    margin-top: 70px;
+}
+.current-year-title{
+    color: #FF0000;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+.current-year-text{
+    font-size: 18px;
+    color: #070211;
+    margin-top: 15pxpx;
+}
+.current-year-image{
+    height: 120px;
+    width: 120px;
+    margin-top: 20px;
+}
+
